--- a/pyproject.toml
+++ b/pyproject.toml
@@ -144,6 +144,7 @@ addopts = "--durations=10"
 
 [tool.pytest.ini_options]
 addopts = "-n auto"
+testpaths = "tests"
 
 [tool.setuptools.package-data]
 rxn_network = ["py.typed"]
