--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ classifiers = [
 requires-python = ">=3.7"
 dependencies = [
     "pymatgen>=2022.0.8",
-    "asteval>=0.9.31"
+    "asteval>=0.9.31",
+    "xmltodict>=0.12.0",
 ]
 
 [project.optional-dependencies]
