--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "pymatgen>=2022.0.8",
     "asteval>=0.9.31",
     "xmltodict>=0.12.0",
+    "plotly>=5.3.1",
 ]
 
 [project.optional-dependencies]
