Add phase prediction module

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -149,7 +149,7 @@ addopts = "-n auto"
 testpaths = "tests"
 
 [tool.setuptools.package-data]
-rxn_network = ["py.typed"]
+dara = ["py.typed"]
 
 [tool.setuptools-git-versioning]
 enabled = true
