--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "asteval>=0.9.31",
     "xmltodict>=0.12.0",
     "plotly>=5.3.1",
+    "reaction-network>=8.2.0"
 ]
 
 [project.optional-dependencies]
@@ -46,11 +47,14 @@ tests = [
 ]
 strict = [
     "pymatgen==2023.11.12",
-    "asteval==0.9.31"
+    "asteval==0.9.31",
+    "xmltodict==0.13.0",
+    "plotly==5.18.0",
+    "reaction-network>=8.2.0"
 ]
 
 [project.urls]
-homepage = "https://github.com/idocx/ar3l-search"
+homepage = "https://github.com/idocx/dara"
 
 [tool.coverage.run]
 include = ["src/*"]
