--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,13 +30,15 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Chemistry",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dependencies = [
     "pymatgen>=2022.0.8",
     "asteval>=0.9.31",
     "xmltodict>=0.12.0",
     "plotly>=5.3.1",
-    "reaction-network>=8.2.0"
+    "toml>=0.10.2",
+    "reaction-network>=8.2.0",
+    "mp_api>=0.3.0",
 ]
 
 [project.optional-dependencies]
@@ -76,7 +78,7 @@ exclude_also = [
 ]
 
 [tool.ruff]
-target-version = "py38"
+target-version = "py39"
 line-length = 120
 select = [
     "B",      # flake8-bugbear
