--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ keywords = [
     "x-ray",
 ]
 license = { text = "modified BSD" }
-authors = [{ name = "Yuxing Fei", email = "yuxingfei@berkeley.edu" }, {name = "Matthew McDermott", email = "mcdermott@lbl.gov"}]
+authors = [{ name = "Yuxing Fei", email = "yuxingfei@berkeley.edu" }, { name = "Matthew McDermott", email = "mcdermott@lbl.gov" }]
 dynamic = ["version"]
 classifiers = [
     "Programming Language :: Python :: 3",
@@ -81,57 +81,57 @@ exclude_also = [
 target-version = "py39"
 line-length = 120
 select = [
-    "B",      # flake8-bugbear
-    "C4",     # flake8-comprehensions
-    "D",      # pydocstyle
-    "E",      # pycodestyle error
-    "EXE",    # flake8-executable
-    "F",      # pyflakes
-    "FA",     # flake8-future-annotations
+    "B", # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "D", # pydocstyle
+    "E", # pycodestyle error
+    "EXE", # flake8-executable
+    "F", # pyflakes
+    "FA", # flake8-future-annotations
     "FBT003", # boolean-positional-value-in-call
-    "FLY",    # flynt
-    "I",      # isort
-    "ICN",    # flake8-import-conventions
-    "ISC",    # flake8-implicit-str-concat
-    "PD",     # pandas-vet
-    "PERF",   # perflint
-    "PIE",    # flake8-pie
-    "PL",     # pylint
-    "PT",     # flake8-pytest-style
-    "PYI",    # flakes8-pyi
-    "Q",      # flake8-quotes
-    "RET",    # flake8-return
-    "RSE",    # flake8-raise
-    "RUF",    # Ruff-specific rules
-    "SIM",    # flake8-simplify
-    "SLOT",   # flake8-slots
-    "TCH",    # flake8-type-checking
-    "TID",    # flake8-tidy-imports
-    "UP",     # pyupgrade
-    "W",      # pycodestyle warning
-    "YTT",    # flake8-2020
+    "FLY", # flynt
+    "I", # isort
+    "ICN", # flake8-import-conventions
+    "ISC", # flake8-implicit-str-concat
+    "PD", # pandas-vet
+    "PERF", # perflint
+    "PIE", # flake8-pie
+    "PL", # pylint
+    "PT", # flake8-pytest-style
+    "PYI", # flakes8-pyi
+    "Q", # flake8-quotes
+    "RET", # flake8-return
+    "RSE", # flake8-raise
+    "RUF", # Ruff-specific rules
+    "SIM", # flake8-simplify
+    "SLOT", # flake8-slots
+    "TCH", # flake8-type-checking
+    "TID", # flake8-tidy-imports
+    "UP", # pyupgrade
+    "W", # pycodestyle warning
+    "YTT", # flake8-2020
 ]
 ignore = [
-    "B023",    # Function definition does not bind loop variable
-    "B028",    # No explicit stacklevel keyword argument found
-    "B904",    # Within an except clause, raise exceptions with ...
-    "C408",    # unnecessary-collection-call
-    "D105",    # Missing docstring in magic method
-    "D205",    # 1 blank line required between summary line and description
-    "D212",    # Multi-line docstring summary should start at the first line
-    "PD011",   # pandas-use-of-dot-values
-    "PD901",   # pandas-df-variable-name
+    "B023", # Function definition does not bind loop variable
+    "B028", # No explicit stacklevel keyword argument found
+    "B904", # Within an except clause, raise exceptions with ...
+    "C408", # unnecessary-collection-call
+    "D105", # Missing docstring in magic method
+    "D205", # 1 blank line required between summary line and description
+    "D212", # Multi-line docstring summary should start at the first line
+    "PD011", # pandas-use-of-dot-values
+    "PD901", # pandas-df-variable-name
     "PERF203", # try-except-in-loop
     "PERF401", # manual-list-comprehension (TODO fix these or wait for autofix)
-    "PLR",     # pylint-refactor
+    "PLR", # pylint-refactor
     "PLW2901", # Outer for loop variable overwritten by inner assignment target
-    "PT004",   # pytest-missing-fixture-name-underscore
-    "PT006",   # pytest-parametrize-names-wrong-type
-    "PT013",   # pytest-incorrect-pytest-import
-    "PYI024",  # collections-named-tuple (TODO should maybe fix these)
-    "RUF012",  # Disable checks for mutable class args. This is a non-problem.
-    "RUF013",  # implicit-optional
-    "SIM105",  # Use contextlib.suppress(OSError) instead of try-except-pass
+    "PT004", # pytest-missing-fixture-name-underscore
+    "PT006", # pytest-parametrize-names-wrong-type
+    "PT013", # pytest-incorrect-pytest-import
+    "PYI024", # collections-named-tuple (TODO should maybe fix these)
+    "RUF012", # Disable checks for mutable class args. This is a non-problem.
+    "RUF013", # implicit-optional
+    "SIM105", # Use contextlib.suppress(OSError) instead of try-except-pass
 ]
 pydocstyle.convention = "numpy"
 
@@ -157,7 +157,7 @@ addopts = "-n auto"
 testpaths = "tests"
 
 [tool.setuptools.package-data]
-dara = ["py.typed"]
+dara = ["py.typed", "data/*"]
 
 [tool.setuptools-git-versioning]
 enabled = true
