--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,10 @@ keywords = [
     "x-ray",
 ]
 license = { text = "modified BSD" }
-authors = [{ name = "Yuxing Fei", email = "yuxingfei@berkeley.edu" }, { name = "Matthew McDermott", email = "mcdermott@lbl.gov" }]
+authors = [
+    { name = "Yuxing Fei", email = "yuxingfei@berkeley.edu" },
+    { name = "Matthew McDermott", email = "mcdermott@lbl.gov" }
+]
 dynamic = ["version"]
 classifiers = [
     "Programming Language :: Python :: 3",
@@ -39,6 +42,7 @@ dependencies = [
     "toml>=0.10.2",
     "reaction-network>=8.2.0",
     "mp_api>=0.3.0",
+    "pyts>=0.11.0",
 ]
 
 [project.optional-dependencies]
