--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
     "mp_api>=0.3.0",
     "pyts>=0.11.0",
     "jenkspy>=0.4.0",
+    "dict2xml>=1.7.0",
 ]
 
 [project.optional-dependencies]
@@ -56,6 +57,7 @@ strict = [
     "pymatgen==2023.11.12",
     "asteval==0.9.31",
     "xmltodict==0.13.0",
+    "dict2xml==1.7.4",
     "plotly==5.18.0",
     "reaction-network>=8.2.0"
 ]
