--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,8 +40,6 @@ dependencies = [
     "xmltodict>=0.12.0",
     "plotly>=5.3.1",
     "toml>=0.10.2",
-    "reaction-network>=8.2.0",
-    "mp_api>=0.3.0",
     "jenkspy>=0.4.0",
     "dict2xml>=1.7.0",
     "treelib>=1.6.1",
@@ -60,8 +58,6 @@ strict = [
     "xmltodict==0.13.0",
     "dict2xml==1.7.4",
     "plotly==5.18.0",
-    "reaction-network==8.2.0",
-    "mp_api==0.3.0",
     "jenkspy==0.4.0",
     "dict2xml==1.7.0",
     "treelib==1.6.1",
@@ -69,6 +65,10 @@ strict = [
 ]
 workflows = [
     "jobflow==0.1.15",
+]
+prediction = [
+    "reaction-network==8.2.0",
+    "mp_api==0.3.0",
 ]
 
 [project.urls]
