--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dara"
+version = "0.8.0"
 description = "Data-driven automated Rietveld analysis using BGMN."
 readme = "README.md"
 keywords = [
@@ -44,6 +45,8 @@ dependencies = [
     "dict2xml>=1.7.0",
     "treelib>=1.6.1",
     "scikit-learn>=1.3.2",
+    "pydantic>=2.5.3",
+    "pydantic-settings>=2.1.0",
 ]
 
 [project.optional-dependencies]
@@ -62,6 +65,8 @@ strict = [
     "dict2xml==1.7.0",
     "treelib==1.6.1",
     "scikit-learn==1.3.2",
+    "pydantic==2.5.3",
+    "pydantic-settings==2.1.0",
 ]
 workflows = [
     "jobflow==0.1.15",
