--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,13 @@ prediction = [
     "reaction-network==8.2.0",
     "mp_api==0.3.0",
 ]
+docs = [
+    "sphinx==7.3.7",
+    "recommonmark==0.7.1",
+    " sphinx_autodoc_typehints==2.2.2",
+    "sphinx-book-theme==1.1.3",
+    "autodoc_pydantic==2.2.0"
+]
 
 [project.urls]
 homepage = "https://github.com/idocx/dara"
