--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ dependencies = [
     "scikit-learn>=1.3.2",
     "pydantic>=2.5.3",
     "pydantic-settings>=2.1.0",
+    "ray>=2.9.0"
 ]
 
 [project.optional-dependencies]
@@ -65,6 +66,7 @@ strict = [
     "scikit-learn==1.3.2",
     "pydantic==2.5.3",
     "pydantic-settings==2.1.0",
+    "ray==2.9.0",
 ]
 workflows = [
     "jobflow==0.1.15",
