--- a/.github/workflows/build_sphinx.yaml
+++ b/.github/workflows/build_sphinx.yaml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.10'
+      - name: Update pip
+        run: pip install --upgrade pip
       - name: Set up dependencies
         run: pip install '.[docs,strict,workflows,prediction]'
       - name: Compile sphinx
