add more documents

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "dara"
 description = "Data-driven automated Rietveld analysis using BGMN."
 readme = "README.md"
+version = "0.9.0"
 keywords = [
     "rietveld",
     "search-match",
@@ -19,12 +20,12 @@ authors = [
     { name = "Yuxing Fei", email = "yuxingfei@berkeley.edu" },
     { name = "Matthew McDermott", email = "mcdermott@lbl.gov" }
 ]
-dynamic = ["version"]
 classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: BSD License",
     "Operating System :: OS Independent",
@@ -77,10 +78,13 @@ prediction = [
 ]
 docs = [
     "sphinx==7.3.7",
-    "recommonmark==0.7.1",
+    "myst-parser==3.0.1",
     "sphinx_autodoc_typehints==2.2.2",
     "sphinx-book-theme==1.1.3",
-    "autodoc_pydantic==2.2.0"
+    "autodoc_pydantic==2.2.0",
+    "myst-nb==1.1.0",
+    "sphinx_design==0.6.0",
+    "sphinx-copybutton==0.5.2"
 ]
 
 [project.urls]
