--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ tests = [
     "pytest-xdist==3.3.1",
 ]
 strict = [
-    "pymatgen==2023.11.12",
+    "pymatgen==2024.6.10",
     "asteval==0.9.31",
     "xmltodict==0.13.0",
     "dict2xml==1.7.4",
@@ -68,6 +68,7 @@ strict = [
     "pydantic==2.5.3",
     "pydantic-settings==2.1.0",
     "ray==2.9.0",
+    "numpy==1.26.4"
 ]
 workflows = [
     "jobflow==0.1.15",
@@ -84,7 +85,8 @@ docs = [
     "autodoc_pydantic==2.2.0",
     "myst-nb==1.1.0",
     "sphinx_design==0.6.0",
-    "sphinx-copybutton==0.5.2"
+    "sphinx-copybutton==0.5.2",
+    "ipywidgets==8.1.3"
 ]
 
 [project.urls]
