--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,7 +86,8 @@ docs = [
     "myst-nb==1.1.0",
     "sphinx_design==0.6.0",
     "sphinx-copybutton==0.5.2",
-    "ipywidgets==8.1.3"
+    "ipywidgets==8.1.3",
+    "kaleido==0.2.1"
 ]
 
 [project.urls]
