--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,8 @@ dependencies = [
     "scikit-learn>=1.3.2",
     "pydantic>=2.5.3",
     "pydantic-settings>=2.1.0",
-    "ray>=2.9.0"
+    "ray>=2.9.0",
+    "numpy<2.0"  # TODO: remove this when pymatgen is updated
 ]
 
 [project.optional-dependencies]
