--- a/.github/workflows/build_sphinx.yaml
+++ b/.github/workflows/build_sphinx.yaml
@@ -26,6 +26,12 @@ jobs:
         working-directory: .
         run: |
           sphinx-build -M html ./docs ./build
+      - name: Install zip
+        uses: montudor/action-zip@v1
+      - name: Build zip
+        run: |
+          zip -r tutorial.zip notebooks/
+          mv tutorial.zip build/html/_static/
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.ref == 'refs/heads/main' }}
