--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,8 @@ dependencies = [
     "pydantic>=2.5.3",
     "pydantic-settings>=2.1.0",
     "ray>=2.9.0",
-    "numpy<2.0"  # TODO: remove this when pymatgen is updated
+    "numpy<2.0",  # TODO: remove this when pymatgen is updated
+    "pybaselines>=1.1.0",
 ]
 
 [project.optional-dependencies]
@@ -69,7 +70,8 @@ strict = [
     "pydantic==2.5.3",
     "pydantic-settings==2.1.0",
     "ray==2.9.0",
-    "numpy==1.26.4"
+    "numpy==1.26.4",
+    "pybaselines==1.1.0",
 ]
 workflows = [
     "jobflow==0.1.15",
