--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,9 +34,9 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Chemistry",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dependencies = [
-    "pymatgen>=2023.11.12",
+    "pymatgen>=2025.1.1",
     "asteval>=0.9.31",
     "xmltodict>=0.12.0",
     "plotly>=5.3.1",
@@ -45,11 +45,18 @@ dependencies = [
     "dict2xml>=1.7.0",
     "treelib>=1.7.0",
     "scikit-learn>=1.3.2",
-    "pydantic>=2.5.3",
-    "pydantic-settings>=2.1.0",
-    "ray>=2.9.0",
+    "pydantic>=2.11.7",
+    "pydantic-settings>=2.10.1",
+    "ray>=2.48.0",
     "pybaselines>=1.1.0",
     "spglib>=2.5.0",
+    "jobflow>=0.2.0",
+    "montydb>=2.5.3",
+    "fastapi>=0.115.6",
+    "reaction-network>=8.3.0",
+    "mp_api>=0.45.0",
+    "python-multipart>=0.0.19",
+    "uvicorn>=0.34.0",
 ]
 
 [project.optional-dependencies]
@@ -59,7 +66,7 @@ tests = [
     "pytest-xdist==3.3.1",
 ]
 strict = [
-    "pymatgen==2024.6.10",
+    "pymatgen==2025.5.1",
     "asteval==0.9.31",
     "xmltodict==0.13.0",
     "dict2xml==1.7.4",
@@ -67,19 +74,15 @@ strict = [
     "jenkspy==0.4.0",
     "treelib==1.7.0",
     "scikit-learn==1.3.2",
-    "pydantic==2.5.3",
-    "pydantic-settings==2.1.0",
-    "ray==2.9.0",
+    "pydantic==2.11.7",
+    "pydantic-settings==2.10.1",
+    "ray==2.48.0",
     "numpy==1.26.4",
     "pybaselines==1.1.0",
     "spglib==2.5.0",
-]
-workflows = [
-    "jobflow==0.1.15",
-]
-prediction = [
-    "reaction-network==8.2.0",
-    "mp_api==0.3.0",
+    "fastapi==0.116.1",
+    "python-multipart==0.0.19",
+    "uvicorn==0.34.0",
 ]
 docs = [
     "sphinx==7.3.7",
@@ -96,6 +99,10 @@ docs = [
 
 [project.urls]
 homepage = "https://github.com/idocx/dara"
+
+[project.scripts]
+dara = "dara.cli:main"
+
 
 [tool.coverage.run]
 include = ["src/*"]
