--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,6 +126,8 @@ exclude_also = [
 [tool.ruff]
 target-version = "py39"
 line-length = 120
+
+[tool.ruff.lint]
 select = [
     "B", # flake8-bugbear
     "C4", # flake8-comprehensions
@@ -162,27 +164,30 @@ ignore = [
     "B028", # No explicit stacklevel keyword argument found
     "B904", # Within an except clause, raise exceptions with ...
     "C408", # unnecessary-collection-call
-    "D105", # Missing docstring in magic method
-    "D205", # 1 blank line required between summary line and description
-    "D212", # Multi-line docstring summary should start at the first line
+    "D", # Missing docstring in magic method
     "PD011", # pandas-use-of-dot-values
     "PD901", # pandas-df-variable-name
     "PERF203", # try-except-in-loop
     "PERF401", # manual-list-comprehension (TODO fix these or wait for autofix)
+    "PLC0415", # `import` should be at the top of the file
     "PLR", # pylint-refactor
     "PLW2901", # Outer for loop variable overwritten by inner assignment target
-    "PT004", # pytest-missing-fixture-name-underscore
     "PT006", # pytest-parametrize-names-wrong-type
     "PT013", # pytest-incorrect-pytest-import
     "PT009", # pytest-assertion-rewrite
     "PYI024", # collections-named-tuple (TODO should maybe fix these)
+    "RUF001", # String contains ambiguous `–` (EN DASH). Did you mean `-` (HYPHEN-MINUS)?
     "RUF012", # Disable checks for mutable class args. This is a non-problem.
     "RUF013", # implicit-optional
+    "RUF015",
+    "RUF017",
     "SIM105", # Use contextlib.suppress(OSError) instead of try-except-pass
+    "TC",
+    "UP",
 ]
 pydocstyle.convention = "numpy"
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 "**/tests/*" = ["D"]
 "**/schemas/*" = ["FA", "TCH", "UP007"]
@@ -200,12 +205,12 @@ disable_error_code = "annotation-unchecked"
 addopts = "--durations=10"
 
 [tool.pytest.ini_options]
-addopts = "-n auto"
 testpaths = "tests"
 
 [tool.setuptools.package-data]
 "dara.data" = ["**"]
 "dara" = ["py.typed"]
+"dara.server.ui.public" = ["**"]
 
 [tool.setuptools-git-versioning]
 enabled = true
