--- a/.github/workflows/build_sphinx.yaml
+++ b/.github/workflows/build_sphinx.yaml
@@ -12,16 +12,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set up python
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
         with:
-          python-version: '3.12'
-      - name: Update pip
-        run: pip install --upgrade pip
-      - name: Set up dependencies
-        run: pip install '.[docs,strict]'
+          enable-cache: true
+      - name: Install the project
+        run: uv sync --locked --extra docs --extra strict --dev
       - name: Install zip
         uses: montudor/action-zip@v1
       - name: Build zip
@@ -31,7 +28,7 @@ jobs:
       - name: Compile sphinx
         working-directory: .
         run: |
-          sphinx-build -M html ./docs ./build
+          uv run sphinx-build -M html ./docs ./build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.ref == 'refs/heads/main' }}
