Reduce max_workers for CIF download and copy pyproject.toml in Sphinx build

--- a/.github/workflows/build_sphinx.yaml
+++ b/.github/workflows/build_sphinx.yaml
@@ -25,6 +25,8 @@ jobs:
         run: |
           zip -r tutorial.zip notebooks/
           mv tutorial.zip docs/_static/
+      - name: Copy pyproject
+        run: cp pyproject.toml notebooks/
       - name: Compile sphinx
         working-directory: .
         run: |
