--- a/.github/workflows/build_sphinx.yaml
+++ b/.github/workflows/build_sphinx.yaml
@@ -12,25 +12,26 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
-      - name: Install uv
-        uses: astral-sh/setup-uv@v6
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up python
+        uses: actions/setup-python@v2
         with:
-          enable-cache: true
-      - name: Install the project
-        run: uv sync --extra docs --extra strict --dev
+          python-version: '3.12'
+      - name: Update pip
+        run: pip install --upgrade pip
+      - name: Set up dependencies
+        run: pip install '.[docs,strict]'
       - name: Install zip
         uses: montudor/action-zip@v1
       - name: Build zip
         run: |
           zip -r tutorial.zip notebooks/
           mv tutorial.zip docs/_static/
-      - name: Copy pyproject
-        run: cp pyproject.toml notebooks/
       - name: Compile sphinx
         working-directory: .
         run: |
-          uv run sphinx-build -M html ./docs ./build
+          sphinx-build -M html ./docs ./build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.ref == 'refs/heads/main' }}
